# ceia-ml

./: Ari_Trabajo final ML I.ipynb  Notebook_Mushrooms_Base.ipynb  README.md  Trabajo final ML I.ipynb  notebook_mushrooms - copia.ipynb  notebook_mushrooms.ipynb  notebook_mushrooms_alex.ipynb  pyproject.toml
